--- a/small-device.css
+++ b/small-device.css
@@ -126,12 +126,12 @@
         top: 360px;
     }
 
-    .contains_economique
+    .contains_economic
     {
         margin: 30px 0 0 20px;
     }
 
-    .economique
+    .economic
     {
         width: 180px;
         padding: 0 0 0 52px;
@@ -139,45 +139,45 @@
     }
 
 
-    .contains_familial
+    .contains_family
     {
         position: absolute;
         right: 24px;
         top: 410px;
     }
 
-    .familial
+    .family
     {
         width: 143px;
         padding: 0 0 0 52px;
         font-weight: 600;
     }
 
-    .contains_romantique
+    .contains_romantic
     {
         margin: 14px 0 0 20px;
     }
 
-    .romantique
+    .romantic
     {
         width: 173px;
         padding: 0 0 0 52px;
         font-weight: 600;
     }
 
-    .contains_animaux_autorisé
+    .contains_pets_allowed
     {
         margin: 14px 0 0 20px; 
     }
 
-    .animaux_autorisé
+    .pets_allowed
     {
         width: 230px;
         padding: 0 0 0 52px;
         font-weight: 600;
     }
 
-    .economique:hover,.familial:hover,.romantique:hover,.animaux_autorisé:hover
+    .economique:hover,.familial:hover,.romantic:hover,.pets_allowed:hover
     {
         background: none;
     }
@@ -210,14 +210,14 @@
         border-radius: 0;
     }
 
-    .header h1
+    .header_most_popular h1
     {
         margin: 0 0 25px 0;
         padding-top: 40px;
         font-size: 1,4em;
     }
 
-    .logo_header
+    .logo_header_most_popular
     {
         padding: 20px 0 0 90px;
     }
