--- a/medium-device.css
+++ b/medium-device.css
@@ -35,5 +35,109 @@
         margin-top: 0;
     }
 
-    
+    /*most popular and hosting*/
+
+    .section
+    {
+        flex-direction: column-reverse;
+    }
+
+    .most_popular
+    {
+        width: auto;
+        margin: 0 0 50px 0;
+    }
+
+    .header_most_popular
+    {
+        margin-left: 120px;
+    }
+
+    .picture_most_popular
+    {
+        margin-left: 120px;
+    }
+
+    .contains_hosting
+    {
+        width: auto;
+        height: auto;
+        padding-bottom: 20px;
+        margin: 0 0 50px 0;
+    }
+
+    .description_picture1
+    {
+        position: absolute;
+        top: 779px;
+        left: 0px;
+        width: 226px;
+        height: 86px;
+        background-size: cover;
+        background-color: white;
+        border-radius: 0 0 15px 15px;
+        padding-left: 15px;
+    }
+
+
+    .description_picture2
+    {
+        position: absolute;
+        top: 779px;
+        left: 0px;
+        width: 226px;
+        height: 86px;
+        background-size: cover;
+        background-color: white;
+        border-radius: 0 0 15px 15px;
+        padding-left: 15px;
+    }
+
+    .description_picture3
+    {
+        position: absolute;
+        top: 1028px;
+        left: 4px;
+        width: 228px;
+        height: 86px;
+        background-color: white;
+        border-radius: 0 0 15px 15px;
+        margin-left: -4px;
+        padding-left: 15px;
+    }
+
+    .description_picture4
+    {
+        position: absolute;
+        bottom: 247px;
+        left: 4px;
+        width: 228px;
+        height: 86px;
+        background-color: white;
+        border-radius: 0 0 15px 15px;
+        margin-left: -4px;
+        padding-left: 15px;
+        border: none;
+    }
+
+
+    .contain_description_picture_top
+    {
+        border: none;
+    }
+
+    .contain_description_picture_bottom
+    {
+        position: absolute;
+        top: 1935px;
+        background-color: white;
+        border-radius: 20px;
+        width: 226px;
+        height: 90px;
+        border-radius: 0 0 15px 15px;
+        margin-left: -4px;
+        padding-left: 15px;
+        border: none;
+    }
+
 }
