--- a/small-device.css
+++ b/small-device.css
@@ -1,585 +1,504 @@
-@media (min-width: 320px) and (max-width: 760px)
-{
-
-    #block_pages
-    {
-        width: 100%;
-        margin: auto;
-    }
-
-    /*header*/
-
-    header
-    {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .logo_reservia img
-    {
-        margin: 30px 0 30px 20px;
-    }
-
-    nav
-    {
-        border-bottom: 3px solid #F2F2F2;
-        width: auto;
-        margin:0;
-    }
-
-    nav a
-    {
-        margin: 0;
-        padding: 0 65px 25px 40px;
-    }
-
-    .nav_hosting
-    {
-        width: 167px;
-        border: none;
-        border-bottom: 3px solid #0065FC;
-        padding: 0px 35px 25px 40px;
-    }
-
-    a:hover
-    {
-        border-bottom: 3px solid #0065FC;
-        border-top: none;
-        padding: 0 65px 25px 40px;
-    }
-
-    #inscription
-    {
-        position: absolute;
-        top: 43px;
-        right: 10px;
-        font-weight: 600;
-        border: none;
-        padding: 0;
-    }
-
-    /*section*/
-
-    /*paragraphes*/
-    
-    .section_title h1
-    {
-        width: 315px;
-        margin-left: 20px;  
-        font-size: 1.4em;
-    }
-
-    .section_sub-title span
-    {
-        margin-left: 20px;
-    }
-
-    /*location search*/
-
-    .logo_location
-    {
-        margin-left: 20px;
-        height: 18px;
-    }
-
-    .input
-    {
-        width: 260px;
-        height: 50px;
-        border: 1px solid #F2F2F2;
-    }
-
-    input
-    {
-        position: absolute;
-        width: 200px;
-        left: 80px;
-        background: none;
-    }
-
-    .search_button
-    {
-        display: none;
-    }
-
-    .logo_search
-    {
-        display: flex;
-        position: absolute;
-        margin-left: 300px;
-        padding: 18px 18px 16px 18px;
-        align-items: center;
-        border: 1px solid #0065FC;
-        color: white;
-        background-color: #0065FC;
-        border-radius: 20px;
-    }
-
-    /*Filters*/
-
-    .filters
-    {
-        margin: 30px 0 0 0;
-        width: 375px;
-        flex-direction: column;
-        outline: none;
-    }
-
-    .filters h1
-    {
-        position: absolute;
-        left: 20px;
-        top: 360px;
-    }
-
-    .contains_economic
-    {
-        margin: 30px 0 0 20px;
-    }
-
-    .economic
-    {
-        width: 180px;
-        padding: 0 0 0 52px;
-        font-weight: 600;
-    }
-
-
-    .contains_family
-    {
-        position: absolute;
-        right: 24px;
-        top: 410px;
-    }
-
-    .family
-    {
-        width: 143px;
-        padding: 0 0 0 52px;
-        font-weight: 600;
-    }
-
-    .contains_romantic
-    {
-        margin: 14px 0 0 20px;
-    }
-
-    .romantic
-    {
-        width: 173px;
-        padding: 0 0 0 52px;
-        font-weight: 600;
-    }
-
-    .contains_pets_allowed
-    {
-        margin: 14px 0 0 20px; 
-    }
-
-    .pets_allowed
-    {
-        width: 230px;
-        padding: 0 0 0 52px;
-        font-weight: 600;
-    }
-
-    .economique:hover,.familial:hover,.romantic:hover,.pets_allowed:hover
-    {
-        background: none;
-    }
-
-    /*informations*/
-
-    .informations
-    {
-        width: 375px;
-        height: 50px;
-        margin: 20px 0 15px 20px;
-    }
-
-    /*section*/
-
-    .section
-    {
-        flex-direction: column-reverse;
-        margin: 30px 0 0 0;
-    }
-
-    /*most popular*/
-
-    .most_popular
-    {
-        width: auto;
-        height: 580px;
-        margin: 0;
-        padding: 0 0 0 20px;
-        border-radius: 0;
-    }
-
-    .header_most_popular h1
-    {
-        margin: 0 0 25px 0;
-        padding-top: 40px;
-        font-size: 1,4em;
-    }
-
-    .logo_header_most_popular
-    {
-        padding: 20px 0 0 90px;
-    }
-
-    .picture_most_popular img
-    {
-        margin-bottom: 10px;
-    }
-
-    .description_picture_most_popular1
-    {
-        width: 175px;
-        top: 797px;
-        right: 20px;
-    }
-
-    .description_picture_most_popular2
-    {
-        width: 175px;
-        top: 954px;
-        right: 20px;
-    }
-
-    .description_picture_most_popular3
-    {
-        width: 175px;
-        top: 1111px;
-        right: 20px;
-    }
-
-    /*hosting*/
-
-    .contains_hosting
-    {
-        background: none;
-        margin: 20px 40px 0 20px;
-        padding: 0;
-    }
-
-    .picture_hosting
-    {
-        flex-direction: column;
-    }
-
-    .picture_hosting_1
-    {
-        width: 335px;
-        height: 200px;
-        margin: 0 0 12px 0;
-        border-radius: 20px;
-        box-shadow: 0px 0px 10px  #d9d9d9;
-        background-position: bottom 23px right -6px;
-    }
-
-    .picture_hosting_2
-    {
-        width: 335px;
-        height: 200px;
-        margin-bottom: 12px;
-        border-radius: 20px;
-        box-shadow: 0px 0px 10px  #d9d9d9;
-        background-position: bottom 23px right -6px;
-    }
-
-    .picture_hosting_3
-    {
-        width: 335px;
-        height: 200px;
-        margin-bottom: 12px;
-        border-radius: 20px;
-        box-shadow: 0px 0px 10px  #d9d9d9;
-        background-position: bottom 26px right -12px;
-    }
-
-    .picture_hosting_4
-    {
-        width: 335px;
-        height: 200px;
-        margin-bottom: 12px;
-        border-radius: 20px;
-        box-shadow: 0px 0px 10px  #d9d9d9;
-        background-position: bottom 302px right -6px;
-    }
-    
-    .picture_hosting_5
-    {
-        width: 335px;
-        height: 200px;
-        margin-bottom: 12px;
-        border-radius: 20px;
-        box-shadow: 0px 0px 10px  #d9d9d9;
-        background-position: bottom 45px right -6px;
-    }
-
-    .picture_hosting_6
-    {
-        width: 335px;
-        height: 200px;
-        border-radius: 20px;
-        box-shadow: 0px 0px 10px  #d9d9d9;
-        background-position: bottom 406px right -6px;
-        margin-bottom: 30px;
-    }
-
-    .description_picture1
-    {
-        position: absolute;
-        top: 830px;
-        left: -1px;
-        width: 321px;
-        background-size: cover;
-        background-color: white;
-        border-radius: 0 0 15px 15px;
-        padding-left: 15px;
-    }
-
-    .description_picture2
-    {
-        position: absolute;
-        top: 1050px;
-        left: -1px;
-        width: 321px;
-        background-size: cover;
-        background-color: white;
-        border-radius: 0 0 15px 15px;
-        padding-left: 15px;
-    }
-
-    .description_picture3
-    {
-        position: absolute;
-        top: 1270px;
-        left: -1px;
-        width: 321px;
-        background-size: cover;
-        background-color: white;
-        border-radius: 0 0 15px 15px;
-        padding-left: 15px;
-    }
-
-    .description_picture4
-    {
-        position: absolute;
-        top: 1245px;
-        left: 3px;
-        width: 322px;
-        background-size: cover;
-        background-color: white;
-        border-radius: 0 0 15px 15px;
-        padding-left: 15px;
-    }
-
-    .description_picture5
-    {
-        position: absolute;
-        top: 1465px;
-        left: 3px;
-        width: 322px;
-        background-size: cover;
-        background-color: white;
-        border-radius: 0 0 15px 15px;
-        padding-left: 15px;
-    }
-
-    .description_picture6
-    {
-        position: absolute;
-        top: 1685px;
-        left: 3px;
-        width: 322px;
-        background-size: cover;
-        background-color: white;
-        border-radius: 0 0 15px 15px;
-        padding-left: 15px;
-    }
-
-    .contain_description_picture_bottom
-    {
-        border: none;
-    }
-
-    .picture_hosting span
-    {
-        font-size: 0.9em;
-    }
-
-
-    /*Activity*/
-
-    .contains_activity
-    {
-        margin: 795px 0 0 20px;
-        height: 1377px;
-    }
-    .picture_activity
-    {
-        flex-direction: column;
-    }
-
-    .picture1 
-    {
-        padding-bottom: 20px;
-    }
-
-    .picture1 img
-    {
-        width: 335px;
-        height: 190px;
-    }
-    .picture1 h2
-    {
-        width: 315px;
-        top: 2941px;
-    }
-
-    .picture2
-    {
-        padding-bottom: 20px;
-    }
-
-    .picture2 img
-    {
-        width: 335px;
-        height: 190px;
-        margin-bottom: 213px;
-    }
-
-    .picture2 h2
-    {
-        width: 315px;
-        top: 3155px;
-    }
-
-    .picture3
-    {
-        padding-bottom: 20px;
-        top: 3251px;
-        left: 20px;
-    }
-
-    .picture3 img
-    {
-        width: 335px;
-        height: 190px;
-    }
-
-    .picture3 h2
-    {
-        width: 315px;
-        top: 119px;
-    }
-
-    .picture4
-    {
-        padding-bottom: 20px;
-    }
-
-    .picture4 img
-    {
-        width: 335px;
-        height: 190px;
-    }
-
-    .picture4 h2
-    {
-        width: 315px;
-        top: 3582px;
-    }
-
-    .picture5
-    {
-        padding-bottom: 20px;
-    }
-
-    .picture5 img
-    {
-        width: 335px;
-        height: 190px;
-    }
-
-    .picture5 h2
-    {
-        width: 315px;
-        top: 3796px;
-    }
-
-    .picture6
-    {
-        padding-bottom: 20px;
-        top: 3890px;
-        left: 20px;
-    }
-
-    .picture6 img
-    {
-        width: 335px;
-        height: 190px;
-    }
-
-    .picture6 h2
-    {
-        width: 315px;
-        top: 119px;
-    }
-
-    /*footer*/
-
-    footer
-    {
-        margin: 0;
-        width: auto;
-        height: 460px;
-        flex-direction: column;
-        padding-left: 30px;
-    }
-
-    footer span 
-    {
-        font-size: 1em;
-    }
-
-    footer h3
-    {
-        font-size: 1.2em;
-    }
-
-    .footer_about
-    {
-        padding-top: 20px;
-        margin: 0 0 10px 0;
-    }
-
-    .footer_about a
-    {
-        margin-bottom: 10px;
-    }
-
-    .footer_hosting
-    {
-        margin: 0;
-        margin-bottom: 10px;
-    }
-
-    .footer_hosting a
-    {
-        margin-bottom: 10px;
-    }
-
-
-    .footer_assistance
-    {
-        margin: 0;
-    }
-
-    .footer_assistance a
-    {
-        margin-bottom: 10px;
-    }
+@media (min-width: 320px) and (max-width: 760px) {
+  #block_pages {
+    width: 100%;
+    margin: auto;
+  }
+
+  /*header*/
+
+  header {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .logo_reservia img {
+    margin: 30px 0 30px 20px;
+  }
+
+  nav {
+    border-bottom: 3px solid #f2f2f2;
+    width: auto;
+    margin: 0;
+  }
+
+  nav a {
+    margin: 0;
+    padding: 0 65px 25px 40px;
+  }
+
+  .nav_hosting {
+    width: 167px;
+    border: none;
+    border-bottom: 3px solid #0065fc;
+    padding: 0px 35px 25px 40px;
+  }
+
+  a:hover {
+    border-bottom: 3px solid #0065fc;
+    border-top: none;
+    padding: 0 65px 25px 40px;
+  }
+
+  #inscription {
+    position: absolute;
+    top: 43px;
+    right: 10px;
+    font-weight: 600;
+    border: none;
+    padding: 0;
+  }
+
+  /*section*/
+
+  /*paragraphes*/
+
+  .section_title h1 {
+    width: 315px;
+    margin-left: 20px;
+    font-size: 1.4em;
+  }
+
+  .section_sub-title span {
+    margin-left: 20px;
+  }
+
+  /*location search*/
+
+  .logo_location {
+    margin-left: 20px;
+    height: 18px;
+  }
+
+  .input {
+    width: 260px;
+    height: 50px;
+    border: 1px solid #f2f2f2;
+  }
+
+  input {
+    position: absolute;
+    width: 200px;
+    left: 80px;
+    background: none;
+  }
+
+  .search_button {
+    display: none;
+  }
+
+  .logo_search {
+    display: flex;
+    position: absolute;
+    margin-left: 300px;
+    padding: 18px 18px 16px 18px;
+    align-items: center;
+    border: 1px solid #0065fc;
+    color: white;
+    background-color: #0065fc;
+    border-radius: 20px;
+  }
+
+  /*Filters*/
+
+  .filters {
+    margin: 30px 0 0 0;
+    width: 375px;
+    flex-direction: column;
+    outline: none;
+  }
+
+  .filters h1 {
+    position: absolute;
+    left: 20px;
+    top: 360px;
+  }
+
+  .contains_economic {
+    margin: 30px 0 0 20px;
+  }
+
+  .economic {
+    width: 180px;
+    padding: 0 0 0 52px;
+    font-weight: 600;
+  }
+
+  .contains_family {
+    position: absolute;
+    right: 24px;
+    top: 410px;
+  }
+
+  .family {
+    width: 143px;
+    padding: 0 0 0 52px;
+    font-weight: 600;
+  }
+
+  .contains_romantic {
+    margin: 14px 0 0 20px;
+  }
+
+  .romantic {
+    width: 173px;
+    padding: 0 0 0 52px;
+    font-weight: 600;
+  }
+
+  .contains_pets_allowed {
+    margin: 14px 0 0 20px;
+  }
+
+  .pets_allowed {
+    width: 230px;
+    padding: 0 0 0 52px;
+    font-weight: 600;
+  }
+
+  .economique:hover,
+  .familial:hover,
+  .romantic:hover,
+  .pets_allowed:hover {
+    background: none;
+  }
+
+  /*informations*/
+
+  .informations {
+    width: 375px;
+    height: 50px;
+    margin: 20px 0 15px 20px;
+  }
+
+  /*section*/
+
+  .section {
+    flex-direction: column-reverse;
+    margin: 30px 0 0 0;
+  }
+
+  /*most popular*/
+
+  .most_popular {
+    width: auto;
+    height: 580px;
+    margin: 0;
+    padding: 0 0 0 20px;
+    border-radius: 0;
+  }
+
+  .header_most_popular h1 {
+    margin: 0 0 25px 0;
+    padding-top: 40px;
+    font-size: 1, 4em;
+  }
+
+  .logo_header_most_popular {
+    padding: 20px 0 0 90px;
+  }
+
+  .picture_most_popular img {
+    margin-bottom: 10px;
+  }
+
+  .description_picture_most_popular1 {
+    width: 175px;
+    top: 797px;
+    right: 20px;
+  }
+
+  .description_picture_most_popular2 {
+    width: 175px;
+    top: 954px;
+    right: 20px;
+  }
+
+  .description_picture_most_popular3 {
+    width: 175px;
+    top: 1111px;
+    right: 20px;
+  }
+
+  /*hosting*/
+
+  .contains_hosting {
+    background: none;
+    margin: 20px 40px 0 20px;
+    padding: 0;
+  }
+
+  .picture_hosting {
+    flex-direction: column;
+  }
+
+  .picture_hosting_1 {
+    width: 335px;
+    height: 200px;
+    margin: 0 0 12px 0;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px #d9d9d9;
+    background-position: bottom 23px right -6px;
+  }
+
+  .picture_hosting_2 {
+    width: 335px;
+    height: 200px;
+    margin-bottom: 12px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px #d9d9d9;
+    background-position: bottom 23px right -6px;
+  }
+
+  .picture_hosting_3 {
+    width: 335px;
+    height: 200px;
+    margin-bottom: 12px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px #d9d9d9;
+    background-position: bottom 26px right -12px;
+  }
+
+  .picture_hosting_4 {
+    width: 335px;
+    height: 200px;
+    margin-bottom: 12px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px #d9d9d9;
+    background-position: bottom 302px right -6px;
+  }
+
+  .picture_hosting_5 {
+    width: 335px;
+    height: 200px;
+    margin-bottom: 12px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px #d9d9d9;
+    background-position: bottom 45px right -6px;
+  }
+
+  .picture_hosting_6 {
+    width: 335px;
+    height: 200px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px #d9d9d9;
+    background-position: bottom 406px right -6px;
+    margin-bottom: 30px;
+  }
+
+  .description_picture1 {
+    position: absolute;
+    top: 830px;
+    left: -1px;
+    width: 321px;
+    background-size: cover;
+    background-color: white;
+    border-radius: 0 0 15px 15px;
+    padding-left: 15px;
+  }
+
+  .description_picture2 {
+    position: absolute;
+    top: 1050px;
+    left: -1px;
+    width: 321px;
+    background-size: cover;
+    background-color: white;
+    border-radius: 0 0 15px 15px;
+    padding-left: 15px;
+  }
+
+  .description_picture3 {
+    position: absolute;
+    top: 1270px;
+    left: -1px;
+    width: 321px;
+    background-size: cover;
+    background-color: white;
+    border-radius: 0 0 15px 15px;
+    padding-left: 15px;
+  }
+
+  .description_picture4 {
+    position: absolute;
+    top: 1245px;
+    left: 3px;
+    width: 322px;
+    background-size: cover;
+    background-color: white;
+    border-radius: 0 0 15px 15px;
+    padding-left: 15px;
+  }
+
+  .description_picture5 {
+    position: absolute;
+    top: 1465px;
+    left: 3px;
+    width: 322px;
+    background-size: cover;
+    background-color: white;
+    border-radius: 0 0 15px 15px;
+    padding-left: 15px;
+  }
+
+  .description_picture6 {
+    position: absolute;
+    top: 1685px;
+    left: 3px;
+    width: 322px;
+    background-size: cover;
+    background-color: white;
+    border-radius: 0 0 15px 15px;
+    padding-left: 15px;
+  }
+
+  .contain_description_picture_bottom {
+    border: none;
+  }
+
+  .picture_hosting span {
+    font-size: 0.9em;
+  }
+
+  /*Activity*/
+
+  .contains_activity {
+    margin: 795px 0 0 20px;
+    height: 1377px;
+  }
+  .picture_activity {
+    flex-direction: column;
+  }
+
+  .picture1 {
+    padding-bottom: 20px;
+    margin: 0;
+  }
+
+  .picture1 img {
+    width: 335px;
+    height: 190px;
+  }
+  .picture1 h2 {
+    width: 315px;
+    top: 2943px;
+  }
+
+  .picture2 {
+    margin: 0;
+    padding-bottom: 20px;
+  }
+
+  .picture2 img {
+    width: 335px;
+    height: 190px;
+  }
+
+  .picture2 h2 {
+    width: 315px;
+    top: 3157px;
+  }
+
+  .picture3 {
+    margin: 0;
+    padding-bottom: 20px;
+  }
+
+  .picture3 img {
+    width: 335px;
+    height: 190px;
+  }
+
+  .picture3 h2 {
+    width: 315px;
+    top: 3370px;
+  }
+
+  .picture4 {
+    margin: 0;
+    padding-bottom: 20px;
+  }
+
+  .picture4 img {
+    width: 335px;
+    height: 190px;
+  }
+
+  .picture4 h2 {
+    width: 315px;
+    top: 3584px;
+  }
+
+  .picture5 {
+    margin: 0;
+    padding-bottom: 20px;
+  }
+
+  .picture5 img {
+    width: 335px;
+    height: 190px;
+  }
+
+  .picture5 h2 {
+    width: 315px;
+    top: 3798px;
+  }
+
+  .picture6 {
+    margin: 0;
+    padding-bottom: 20px;
+  }
+
+  .picture6 img {
+    width: 335px;
+    height: 190px;
+  }
+
+  .picture6 h2 {
+    width: 315px;
+    top: 4012px;
+  }
+
+  /*footer*/
+
+  footer {
+    margin: 0;
+    width: auto;
+    height: 460px;
+    flex-direction: column;
+    padding-left: 30px;
+  }
+
+  footer span {
+    font-size: 1em;
+  }
+
+  footer h3 {
+    font-size: 1.2em;
+  }
+
+  .footer_about {
+    padding-top: 20px;
+    margin: 0 0 10px 0;
+  }
+
+  .footer_about a {
+    margin-bottom: 10px;
+  }
+
+  .footer_hosting {
+    margin: 0;
+    margin-bottom: 10px;
+  }
+
+  .footer_hosting a {
+    margin-bottom: 10px;
+  }
+
+  .footer_assistance {
+    margin: 0;
+  }
+
+  .footer_assistance a {
+    margin-bottom: 10px;
+  }
 }
