--- a/css/reservia.css
+++ b/css/reservia.css
@@ -338,7 +338,7 @@ p label {
   border: 4px solid white;
   border-radius: 20px;
   margin: 0 0 40px 5px;
-  background-image: url("images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg");
+  background-image: url("../images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 60px right 0;
 }
@@ -349,7 +349,7 @@ p label {
   border: 4px solid white;
   border-radius: 20px;
   margin-bottom: 40px;
-  background-image: url("images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg");
+  background-image: url("../images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 60px right 0;
 }
@@ -360,7 +360,7 @@ p label {
   border: 4px solid white;
   border-radius: 20px;
   margin-bottom: 40px;
-  background-image: url("images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg");
+  background-image: url("../images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 60px right 0;
 }
@@ -371,7 +371,7 @@ p label {
   border: 4px solid white;
   border-radius: 20px;
   margin-bottom: 40px;
-  background-image: url("images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg");
+  background-image: url("../images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 25px right 0;
 }
@@ -382,7 +382,7 @@ p label {
   border: 4px solid white;
   border-radius: 20px;
   margin-bottom: 40px;
-  background-image: url("images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg");
+  background-image: url("../images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 65px right 0;
 }
@@ -393,7 +393,7 @@ p label {
   border: 4px solid white;
   border-radius: 20px;
   margin-bottom: 40px;
-  background-image: url("images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg");
+  background-image: url("../images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 330px right 0;
 }
