--- a/css/small-device.css
+++ b/css/small-device.css
@@ -206,7 +206,7 @@
   .header_most_popular h1 {
     margin: 0 0 25px 0;
     padding-top: 40px;
-    font-size: 1, 4em;
+    font-size: 1.4em;
   }
 
   .logo_header_most_popular {
