--- a/css/reservia.css
+++ b/css/reservia.css
@@ -30,7 +30,7 @@ body {
   margin: 0px;
 }
 
-#block_pages {
+main {
   width: 100%;
   margin: auto;
   overflow: hidden;
@@ -313,8 +313,7 @@ p label {
 /*hosting*/
 
 .contains_hosting {
-  width: 880px;
-  height: 625px;
+  flex: 2;
   background-color: #f2f2f2;
   padding: 25px 40px 0px 40px;
   border-radius: 20px;
@@ -327,99 +326,81 @@ p label {
 }
 
 .hosting_1 a {
-  width: 235px;
-  height: 200px;
+  text-decoration: none;
   color: black;
 }
 
 .picture_hosting_1 {
-  width: 235px;
-  height: 200px;
   border: 4px solid white;
   border-radius: 20px;
-  margin: 0 0 40px 5px;
+  margin: 0 0 20px 0;
   background-image: url("../images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 60px right 0;
 }
 
 .picture_hosting_2 {
-  width: 235px;
-  height: 200px;
   border: 4px solid white;
   border-radius: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   background-image: url("../images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 60px right 0;
 }
 
 .picture_hosting_3 {
-  width: 235px;
-  height: 200px;
   border: 4px solid white;
   border-radius: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   background-image: url("../images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 60px right 0;
 }
 
 .picture_hosting_4 {
-  width: 235px;
-  height: 200px;
   border: 4px solid white;
   border-radius: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   background-image: url("../images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 25px right 0;
 }
 
 .picture_hosting_5 {
-  width: 235px;
-  height: 200px;
   border: 4px solid white;
   border-radius: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   background-image: url("../images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 65px right 0;
 }
 
 .picture_hosting_6 {
-  width: 235px;
-  height: 200px;
   border: 4px solid white;
   border-radius: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   background-image: url("../images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 330px right 0;
 }
 
 .contain_description_picture_top {
-  position: absolute;
-  top: 670px;
-  background-size: cover;
   background-color: white;
   border: 4px solid white;
   border-radius: 20px;
   width: 220px;
   border-radius: 0 0 15px 15px;
-  margin-left: -4px;
+  margin: 124px -2px -2px -4px;
   padding-left: 15px;
 }
 
 .contain_description_picture_bottom {
-  position: absolute;
-  top: 920px;
   background-color: white;
   border: 4px solid white;
   border-radius: 20px;
   width: 220px;
   border-radius: 0 0 15px 15px;
-  margin-left: -4px;
+  margin: 124px -2px -2px -4px;
   padding-left: 15px;
 }
 
@@ -451,16 +432,16 @@ p label {
 }
 
 .contains_hosting span {
+  margin-top: 20px;
   font-size: 0.9em;
 }
 
 /*Most popular*/
 
 .most_popular {
-  width: 420px;
-  height: 625px;
+  flex: 1;
   background-color: #f2f2f2;
-  margin-left: 40px;
+  margin-left: 3%;
   padding: 25px 30px 0px 40px;
   border-radius: 20px;
 }
